<resources>
    <string name="app_name">Gift Xchange</string>
    <string name="register">REGISTER</string>
    <string name="register_name">Name</string>
    <string name="login_email_hint" translatable="false">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login">LOGIN</string>
    <string name="please_enter_email_address">Please Enter Email Address</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="please_enter_your_name">Please Enter Your Name</string>
    <string name="share_username">Username</string>
    <string name="share_password">Password</string>
    <string name="share_email">Email</string>
    <string name="share_key">Userdata</string>
    <string name="default_web_client_id">AIzaSyCGK-fjAWJX6NPpLq34mD1Y12PWw_sfpto</string>
    <string name="google">Google</string>
    <string name="forgot_password">Forgot Your Password?</string>
    <string name="please_enter_valid_email">Please Enter Valid Email</string>
    <string name="password_reset_email_sent_please_check_your_email">Password reset email sent. Please check your email.</string>
    <string name="failed_to_send_password_reset_email_please_check_your_email_address">Failed to send password reset email. Please check your email address.</string>
    <string name="user_with_this_email_does_not_exist">User with this email does not exist.</string>
    <string name="error_checking_email_existence_please_try_again_later">Error checking email existence. Please try again later.</string>
    <string name="firebase_authentication_failed">Firebase Authentication failed</string>
    <string name="failed_to_create_user_document_in_firestore">Failed to create user account</string>
    <string name="user_data_stored_in_firestore">Google Sign In Successfully</string>
    <string name="email_verification_sent_please_check_your_email">Email verification sent. Please check your email.</string>
    <string name="failed_to_send_email_verification">Failed to send email verification.</string>
    <string name="user_not_exist_please_enter_correct_information">User not exist! Please Enter Correct Information</string>
    <string name="you_successfully_sign_in">You Successfully Sign In</string>
    <string name="error_retrieving_user_document">Error retrieving user data</string>
    <string name="user_is_not_exist">User is not exist!</string>
    <string name="email_is_already_exist_use_other_email">Email is already exist Use other email</string>
    <string name="error_checking_username_existence">Error checking username existence</string>
    <string name="user_registered_successfully">User Registered Successfully</string>
    <string name="username_already_exists_please_use_another_username">Username already exists. Please use another username.</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="mylist">My List</string>
    <string name="profile">Profile</string>
    <string name="add">Add</string>

    <!--shared Preference Key-->
    <string name="key_userid">userID</string>
    <string name="key_name">name</string>
    <string name="key_email">email</string>
    <string name="key_age">age</string>
    <string name="key_password">password</string>
    <string name="addressforGiftCard">addressforGiftCard</string>
    <string name="fulladdress_city">fulladdress_city</string>
    <string name="fulladdress_street">fulladdress_street</string>
    <string name="fulladdress_state">fulladdress_state</string>
    <string name="fulladdress_country">fulladdress_country</string>
    <string name="fulladdress_postalcode_code">fulladdress_postalcode_code</string>
    <string name="ll_title">ll_title</string>
    <string name="ll_price">ll_price</string>
    <string name="ll_location">ll_location</string>
    <string name="ll_date">ll_date</string>
    <string name="ll_userEmail">ll_userEmail</string>
    <string name="ll_userName">ll_userName</string>
    <string name="ll_userID">ll_userID</string>
    <string name="ll_listID">ll_listID</string>
    <string name="ll_listStatus">ll_listStatus</string>

    <!--Firebase object Key-->
    <string name="fs_userid">userID</string>
    <string name="fs_name">userName</string>
    <string name="fs_email">userEmail</string>
    <string name="fs_age">userAge</string>
    <string name="fs_city">city</string>
    <string name="fs_postalCode">postalCode</string>
    <string name="fs_province">province</string>
    <string name="fs_streetName">streetName</string>
    <string name="fs_unitNo">unitNo</string>
    <string name="fs_password">userPassword</string>
    <string name="fs_listname">listTitle</string>
    <string name="fs_cardAmount">cardAmount</string>
    <string name="fs_listType">listType</string>
    <string name="fs_listDate">listDate</string>
    <string name="fs_listStatus">listStatus</string>
    <string name="fs_userMessage">userMessage</string>
    <string name="fs_cardCVV">cardCVV</string>
    <string name="fs_cardExpiryDate">cardExpiryDate</string>
    <string name="fs_cardNumber">cardNumber</string>
    <string name="fs_cardname">cardName</string>

    <string name="update_profile">Update Profile</string>
    <string name="postal_code">Postal Code</string>
    <string name="province">Province</string>
    <string name="city">City</string>
    <string name="street_name">Street Name</string>
    <string name="apt_no">Unit No</string>
    <string name="user_age">Age</string>
    <string name="user_email">Email</string>
    <string name="user_name">User Name</string>

    <!--Firebase collections name-->
    <string name="c_registeruser">RegisterUser</string>
    <string name="c_giftcardlisting">GiftCardListing</string>
    <string name="c_contactus">ContactUs</string>
    <string name="c_address">Address</string>
    <string name="c_payment">Payment</string>
    <string name="c_premium">Premium</string>
    <string name="c_mygiftcard">MyGiftCard</string>

    <string name="done">Done</string>
    <string name="search">Search</string>
    <string name="buy">Buy</string>
    <string name="exchange">Exchange</string>
    <string name="checkout">Checkout</string>
    <string name="canada">Canada</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="card_name">Card Name</string>
    <string name="price">Amount</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="your_name">Your Name</string>
    <string name="your_email">Your Email</string>
    <string name="message">Message</string>
    <string name="contactnumber">(226)-223-1122</string>
    <string name="contact_address">22 Duke Street West, \n Kitchener, ON, CA - N2H 3A0</string>
    <string name="get_in_touch">Get In Touch</string>
    <string name="please_wait">Please Wait...</string>
    <string name="write_message_here">Write message here</string>
    <string name="card_number">Card Number</string>
    <string name="card_expiry">Card Expiry (MMYY)</string>
    <string name="security_code">Security Code</string>
    <string name="payment">Payment</string>
    <string name="are_you_sure_you_want_to_exit_the_app">Are you sure you want to exit the app?</string>
    <string name="public_key">pk_test_51O70fMKlHXuDjdRG8t2AOZKFqd8iaQ5Fkm9iTF1pylHHCmdOTGNXWBFyYkcFqO5wHGMSLCXna6dSCVPeHV6Bqj5w00jhH9c4ex</string>
    <string name="private_key">sk_test_51O70fMKlHXuDjdRG3BhlwtBloc1TXFxchzl1GAQ3kMwL8ftMg8wR5n4PyWTdCrTpXN2cayVo6st0dnOpJc37LwrT00cixxm1Y2</string>
    <string name="policyUrl">https://giftxchange06.blogspot.com/2023/11/privacy-policy.html</string>
    <string name="experience_a_seamless_exchange_of_heartfelt_gifts_making_every_occasion_a_celebration_of_connection">Experience a seamless exchange of heartfelt gifts, making every occasion a celebration of connection</string>

</resources>