<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/baseline_chat_bubble_24"
        android:title="@string/chat" />


    <item
        android:id="@+id/navigation_plus"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/add" />


    <item
        android:id="@+id/navigation_mylist"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/mylist" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile" />
</menu>