<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/view_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/white"
    app:cardCornerRadius="@dimen/loginCardRadius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:layout_marginBottom="@dimen/loginbottomeMargin"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/headerTextSize"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/l_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="@dimen/loginpadding_margin"
            android:textSize="@dimen/newsMoreTextSize" />


        <EditText
            android:id="@+id/l_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:background="@drawable/border"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="@dimen/loginpadding_margin"
            android:textSize="@dimen/newsMoreTextSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_11sdp"
            android:id="@+id/forgot_password"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:text="@string/forgot_password"
            android:textSize="@dimen/newsMoreTextSize" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:background="@drawable/btn_round"
            android:text="@string/login"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_googlesignin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:background="@drawable/signbtn_design"
            android:drawableStart="@drawable/ic_google"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_30sdp"
            android:text="@string/google" />

        <TextView
            android:id="@+id/login_already"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/login_signup_hint"
            android:textAlignment="center"
            android:textSize="@dimen/size_oftextsignup"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.cardview.widget.CardView>