<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/white"
    android:visibility="gone"
    app:cardCornerRadius="@dimen/loginCardRadius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:layout_marginBottom="@dimen/loginbottomeMargin"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/headerTextSize"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/r_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:hint="@string/register_name"
            android:inputType="text"
            android:padding="@dimen/loginpadding_margin"
            android:textSize="@dimen/newsMoreTextSize" />

        <EditText
            android:id="@+id/r_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:background="@drawable/border"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="@dimen/loginpadding_margin"
            android:textSize="@dimen/newsMoreTextSize" />

        <EditText
            android:id="@+id/r_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:background="@drawable/border"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="@dimen/loginpadding_margin"
            android:textSize="@dimen/newsMoreTextSize" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:background="@drawable/btn_round"
            android:text="@string/register"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/register_already"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/signup_login_hint"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/size_oftextsignup"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.cardview.widget.CardView>